Generalize substitution engine with structural detection and nested expansion